# Speedy-Sketching

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  SpeedySketching.pro  algorithms.cpp  algorithms.h  build.sh  circle.cpp  circle.h  cone.cpp  cone.h  cylinder.cpp  cylinder.h  display.cpp  display.h  freehand.cpp  freehand.h  icons.qrc  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  object.h  point.cpp  point.h  rect.cpp  rect.h  run.sh  scene.cpp  scene.h  shape.cpp  shape.h  sphere.cpp  sphere.h  strokes.cpp  strokes.h  (+2 more)
